# poker

./: .rustfmt.toml  Cargo.toml
src/: brain.rs  card.rs  combination.rs  deck.rs  flush.rs  four_of_a_kind.rs  full_house.rs  hand.rs  high_card.rs  lib.rs  main.rs  mod.rs  pairs.rs  player.rs  round.rs  royal_straight_flush.rs  straight.rs  straight_flush.rs  table.rs  three_of_a_kind.rs
tests/: deck.rs  flush.rs  four_of_a_kind.rs  full_house.rs  high_card.rs  pairs.rs  probabilities.rs  royal_straight_flush.rs  straight.rs  straight_flush.rs  table.rs  three_of_a_kind.rs
