[package]
name = "poker"
version = "0.1.0"
edition = "2021"
description = "poker"
authors = ["Pas2Rust <pas2000@proton.me>"]
homepage = "https://github.com/pas2rust/poker"
repository = "https://github.com/pas2rust/poker"
exclude = [
    "tests/*",
    "tests",
]

[package.metadata.scripts]
dev = "cargo fmt && cargo clippy && cargo run"
test = "cargo fmt && cargo clippy && cargo test"
test_quiet = "cargo fmt && cargo clippy && cargo test --quiet"
deploy = "cargo fmt && cargo clippy"
clean = "cargo clean && rm -rf target && rm -rf dist"

[dependencies]
chrono = "0.4.33"
colorful = "0.2.2"
darth-rust = "0.8.2"
itertools = "0.12.1"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
